Some cleanups and README about the patch